avoid overflow of hidden form
fixes hover on upload button leaking over New button

--- a/notebook/static/tree/less/altuploadform.less
+++ b/notebook/static/tree/less/altuploadform.less
@@ -18,9 +18,8 @@
         display: block;
         width: 100%;
         height: 100%;
-
+        overflow: hidden;
         cursor: pointer;
-
         opacity: 0;
         z-index: 2;
     }
